--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "blog",
-  "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "astro:dev": "pnpm --filter frontend astro dev",
+    "rocket:watch": "cd apps/blog-backend && cargo watch -x run",
+    "rocket:build": "cd apps/blog-backend && cargo build",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "@astrojs/mdx": "^0.19.1",
-    "@astrojs/rss": "^2.4.1",
-    "@astrojs/sitemap": "^1.3.0",
-    "astro": "^2.4.1"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
