--- a/apps/blog-backend/Cargo.toml
+++ b/apps/blog-backend/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "=0.5.0-rc.3"
+anyhow = "1.0.71"
+rocket = { version= "=0.5.0-rc.3", features = ["json"] }
+sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros", "migrate", "uuid", "json"] }
+uuid = { version = "1", features = ["v4", "serde"] }
